Work for feature DocumentLibrary
- Added DAO for DocumentLibrary
- Added Service for DocumentLibrary
- Added DocumentLibrary view. This view is intended for reuse on a
community page. Just include DocumentLibrary.xhtml and make sure a GET
parameter called "communityId" is provided. DocumentLibraryController is
look for this parameter and should provide the right library

Still work in progress....

--- a/pse-dbmodell/src/main/webapp/protected/Main.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Main.xhtml
@@ -54,13 +54,13 @@
 					</div>
 					<div class="ui-grid-col-4">
 						<p:panel header="Dokumentenbibliothek">
-
+							<ui:include src="DocumentLibrary.xhtml">
+								<ui:param name="communityId" value="1"/>
+							</ui:include>
 						</p:panel>
 					</div>
 				</div>
 			</div>
 		</h:form>
-
-
 	</ui:define>
 </ui:composition>
