Test for Activity Stream added (fails for now because tests aren't using Hibernate

--- a/pse-dbmodell/src/main/webapp/protected/Main.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Main.xhtml
@@ -46,7 +46,7 @@
 												<f:convertDateTime pattern="dd.MM.yyyy HH:mm" />
 											</h:outputText>
 										</h:panelGrid>
-										<h:outputText value="#{activity.message}" />
+										<h:outputText value="#{activity.message}" escape="false"/>
 									</p:outputPanel>
 								</h:panelGrid>
 							</p:dataScroller>
