--- a/pse-dbmodell/src/main/webapp/protected/UserList.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/UserList.xhtml
@@ -10,7 +10,7 @@
 		<h:form>
 		
 			<p:dataScroller value="#{userListView.users}" var="user"
-				chunkSize="10" mode="inline" scrollHeight="500">
+				chunkSize="10" mode="inline">
 				<f:facet name="header">
             		Liste aller Benutzer
         		</f:facet>
