--- a/pse-dbmodell/src/main/webapp/protected/Menu.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Menu.xhtml
@@ -17,18 +17,7 @@
 	            	<span class="ui-separator">
 	                	<span class="ui-icon ui-icon-grip-dotted-vertical" />
 	            	</span>
-					<p:splitButton value="#{loginController.loggedInUsername}"
-						icon="ui-icon-person">
-						<p:menuitem>
-							<h:link outcome="/protected/User.jsf"
-								styleClass="ui-menuitem-link ui-corner-left">
-								<f:param name="userName"
-									value="#{loginController.loggedInUsername}" />
-								<f:param name="mode" value="view" />
-								<span class="ui-menuitem-icon ui-icon ui-icon-home"></span>
-								<span class="ui-menuitem-text">Startseite</span>
-							</h:link>
-						</p:menuitem>
+					<p:menuButton value="#{loginController.loggedInUsername}">
 						<p:menuitem>
 							<h:link outcome="/protected/User.jsf"
 								styleClass="ui-menuitem-link ui-corner-all">
@@ -49,7 +38,7 @@
 						<p:menuitem value="Abmelden"
 							actionListener="#{loginController.logout}"
 							icon="ui-icon-arrowthickstop-1-e" />
-					</p:splitButton>
+					</p:menuButton>
             	</h:form>
 			</f:facet>
 			<f:facet name="right">
