--- a/pse-dbmodell/src/main/webapp/protected/Communities.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Communities.xhtml
@@ -6,11 +6,25 @@
 	xmlns:p="http://primefaces.org/ui"
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:define name="content">
-	
-	<h:form>
-	Liste aller Communities - To be done
-	</h:form>
-	
-	
+    <h:form id="communitySearch">
+	    	<h1>Communities</h1>
+	    	<p:inputText value="" />
+			<p:commandLink id="ajax" update="communities" actionListener="#{dtCommunitiesView.search}">
+	       		<p:commandButton value="search" id="communitySearch"/>
+	   		</p:commandLink>
+	   		<br/><br/><br/>
+			<p:dataTable var="community" value="#{communityController.communities}" id="communities"
+				paginator="true" rows="10"
+               	paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
+               	selectionMode="single" selection="#{dtCommunitiesView.selectedCommunity}" 
+               	rowKey="#{community.communityId}"
+			>
+			<p:ajax event="rowSelect" listener="#{dtCommunitiesView.onCommunitySelected}" ></p:ajax>
+			    <p:column headerText="Community Name">
+			        <h:outputText value="#{community.name}" />
+			    </p:column>
+			</p:dataTable>
+		</h:form>
+
 	</ui:define>
 </ui:composition>
