--- a/pse-dbmodell/src/main/webapp/protected/Main.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Main.xhtml
@@ -8,11 +8,8 @@
 	<ui:define name="content">
 
 		<h:form>
-			<div>
-				<a
-					href="#{request.contextPath}/protected/xperimental/AddMessage.jsf">Demonachricht
-					eingeben</a>
-			</div>
+			<h:button value="Demonachricht"
+				outcome="/protected/xperimental/AddMessage.jsf" />
 
 			<div class="ui-grid ui-grid-responsive">
 				<div class="ui-grid-row">
@@ -30,24 +27,27 @@
 									columnClasses="logo,detail">
 									<p:outputPanel>
 										<h:panelGrid columns="6" cellpadding="5">
-											<h:outputLabel value="#{activity.privateMessage ? 'Privat' : 
-												activity.community}" style="font-weight: bold; font-style: italic"/>
+											<h:outputLabel
+												value="#{activity.privateMessage ? 'Privat' : 
+												activity.community}"
+												style="font-weight: bold; font-style: italic" />
 											<h:outputText value="Autor:" />
-											<h:outputText
-												value="#{activity.author}"
+											<h:outputText value="#{activity.author}"
 												style="font-weight: bold" />
 											<h:outputText value="Datum:" />
 											<h:outputText value="#{activity.date}"
 												style="font-weight: bold">
 												<f:convertDateTime pattern="dd.MM.yyyy HH:mm" />
 											</h:outputText>
-											<h:commandButton action="#{messageDetailsController.openDetailView}" value="Details"
-												icon="ui-icon-search">
+											<h:commandButton
+												action="#{messageDetailsController.openDetailView}"
+												value="Details" icon="ui-icon-search">
 												<f:param name="messageId" value="#{activity.id}" />
 											</h:commandButton>
 										</h:panelGrid>
-										<h:outputText value="#{activity.headline} &lt;br/&gt;" escape="false" style="font-weight: bold" />				
-										<h:outputText value="#{activity.text}" escape="false"/>
+										<h:outputText value="#{activity.headline} &lt;br/&gt;"
+											escape="false" style="font-weight: bold" />
+										<h:outputText value="#{activity.text}" escape="false" />
 									</p:outputPanel>
 								</h:panelGrid>
 							</p:dataScroller>
