added feedback for user after reseting the password

--- a/pse-dbmodell/src/main/webapp/ResetPassword.xhtml
+++ b/pse-dbmodell/src/main/webapp/ResetPassword.xhtml
@@ -15,12 +15,17 @@
 
 			<p:inputText value="#{resetPasswordController.emailAddress}"/>
 			<p>
-				<p:commandButton value="Kennwort zurücksetzen" action="#{resetPasswordController.resetPassword}" />
+				<p:commandButton value="Kennwort zurücksetzen" action="#{resetPasswordController.resetPassword}" update="response"/>
 
-				<p:button outcome="index.xhtml" value="Abbrechen" />
+								
 			</p>
-
-		
+			<h:panelGroup id="response" rendered="true">
+				
+				<h:outputText id="status" value="#{resetPasswordController.statusText}" />				
+			</h:panelGroup>
+			<p>
+				<p:link outcome="index.xhtml" value="Zurück zum Login" />
+			</p>
 		</h:form>
 	</ui:define>
 </ui:composition>
