--- a/pse-dbmodell/src/main/webapp/protected/UserList.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/UserList.xhtml
@@ -8,15 +8,15 @@
 	<ui:define name="content">
 
 		<h:form>
-		
+
 			<p:dataScroller value="#{userListView.users}" var="user"
-				chunkSize="10" mode="inline">
+				chunkSize="10" mode="inline" scrollHeight="1000" scrollable="true">
 				<f:facet name="header">
             		Liste aller Benutzer
         		</f:facet>
 
 				<ui:insert name="userList" />
-				
+
 			</p:dataScroller>
 
 		</h:form>
