--- a/pse-dbmodell/src/main/webapp/protected/Main.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Main.xhtml
@@ -6,23 +6,21 @@
 	xmlns:p="http://primefaces.org/ui"
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:define name="content">
+		<div>
+			<a href="#{request.contextPath}/protected/xperimental/AddMessage.jsf">Demonachricht
+				eingeben</a>
+		</div>
 
-		<h:form>
-			<div>
-				<a
-					href="#{request.contextPath}/protected/xperimental/AddMessage.jsf">Demonachricht
-					eingeben</a>
-			</div>
-
-			<div class="ui-grid ui-grid-responsive">
-				<div class="ui-grid-row">
-					<div class="ui-grid-col-12">
-						<p:panel header="News">
-						</p:panel>
-					</div>
+		<div class="ui-grid ui-grid-responsive">
+			<div class="ui-grid-row">
+				<div class="ui-grid-col-12">
+					<p:panel header="News">
+					</p:panel>
 				</div>
-				<div class="ui-grid-row">
-					<div class="ui-grid-col-7">
+			</div>
+			<div class="ui-grid-row">
+				<div class="ui-grid-col-7">
+					<h:form>
 						<p:panel header="Activities">
 							<p:dataScroller value="#{simpleFeedController.activities}"
 								var="activity" chunkSize="10" mode="inline" scrollHeight="500">
@@ -30,37 +28,38 @@
 									columnClasses="logo,detail">
 									<p:outputPanel>
 										<h:panelGrid columns="6" cellpadding="5">
-											<h:outputLabel value="#{activity.privateMessage ? 'Privat' : 
-												activity.community}" style="font-weight: bold; font-style: italic"/>
+											<h:outputLabel
+												value="#{activity.privateMessage ? 'Privat' : 
+												activity.community}"
+												style="font-weight: bold; font-style: italic" />
 											<h:outputText value="Autor:" />
-											<h:outputText
-												value="#{activity.author}"
+											<h:outputText value="#{activity.author}"
 												style="font-weight: bold" />
 											<h:outputText value="Datum:" />
 											<h:outputText value="#{activity.date}"
 												style="font-weight: bold">
 												<f:convertDateTime pattern="dd.MM.yyyy HH:mm" />
 											</h:outputText>
-											<h:commandButton action="#{messageDetailsController.openDetailView}" value="Details"
-												icon="ui-icon-search">
+											<h:commandButton
+												action="#{messageDetailsController.openDetailView}"
+												value="Details" icon="ui-icon-search">
 												<f:param name="messageId" value="#{activity.id}" />
 											</h:commandButton>
 										</h:panelGrid>
-										<h:outputText value="#{activity.headline} &lt;br/&gt;" escape="false" style="font-weight: bold" />				
-										<h:outputText value="#{activity.text}" escape="false"/>
+										<h:outputText value="#{activity.headline} &lt;br/&gt;"
+											escape="false" style="font-weight: bold" />
+										<h:outputText value="#{activity.text}" escape="false" />
 									</p:outputPanel>
 								</h:panelGrid>
 							</p:dataScroller>
 						</p:panel>
-					</div>
-					<div class="ui-grid-col-5">
-						<p:panel header="Dokumentenbibliothek">
-							<ui:include src="DocumentLibrary.xhtml">
-							</ui:include>
-						</p:panel>
-					</div>
+					</h:form>
+				</div>
+				<div class="ui-grid-col-5">
+						<ui:include src="DocumentLibrary.xhtml">
+						</ui:include>
 				</div>
 			</div>
-		</h:form>
+		</div>
 	</ui:define>
 </ui:composition>
