send message via email to persons

--- a/pse-dbmodell/src/main/webapp/protected/Services.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Services.xhtml
@@ -9,6 +9,7 @@
 	
 	<h:form>
 	Es sind noch keine Services verfügbar.
+		<p:commandButton if="testbutton" value="tesnachricht senden" actionListener="#{mailerTest.send}" ajax="false"/>
 	</h:form>
 	
 	
